--- a/i3blocks/config
+++ b/i3blocks/config
@@ -4,42 +4,31 @@ separator=true
 separator_block_width=20
 markup=pango
 
-# ======================
-# WINDOW (CENTER)
-# ======================
+
 [window]
 command=i3-msg -t get_tree | jq -r '.. | select(.focused? == true).name // empty'
 interval=1
-align=right
-markup=pango
+min_width="                                                                                                                                                                                                                                                                   "
+align=left
+separator=true
 
-
-
-# ======================
-# CLOCK (CENTER)
-# ======================
 [clock]
-markup=pango
 command=date '+<span foreground="#ff8c00">%H:%M</span>'
 interval=1
 align=center
 
-
-# ======================
-# MEMORY
-# ======================
-[memory]
+[updates]
+command=$HOME/.config/i3blocks/scripts/updates.sh
+interval=1800
 markup=pango
-command=free -h | awk '/Mem:/ {printf "<span foreground=\"#FFFFFF\">[RAM]: </span><span foreground=\"#ff8c00\">%s / %s</span>\n", $3, $2}'
-interval=5
-align=right
 
-
-# ======================
-# POWER MENU
-# ======================
 [power]
 command=/home/joji/.config/i3blocks/scripts/power-block.sh
 interval=1
 align=right
 markup=pango
+
+[spacer-right]
+command=echo ""
+interval=once
+align=right
